Call ClassLoader.getResource() if we can't find the file